--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,6 +71,10 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/carvana/jobs/1935818'>Job Application for Data Analyst, Operations at Carvana</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/hometogo/jobs/1935045'>Job Application for Senior Data Analyst (m/f/d) at HomeToGo</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-28</p>
@@ -95,11 +99,11 @@
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/f5vjL70NSo/Data-Analyst'>Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/f5vjL70NSo/Data-Analyst'>Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/KLiCI49FTx/Financial-Business-Data-Analyst'>Financial Business Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/KLiCI49FTx/Financial-Business-Data-Analyst'>Financial Business Data Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -141,7 +145,7 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://searchmetrics.recruitee.com/o/technical-account-manager-data-analyst-mwd-integrations-reportings'>
+<h5><a href='https://searchmetrics.recruitee.com/o/technical-account-manager-data-analyst-mwd-integrations-reportings'>
       Technical Account Manager / Data Analyst (m/w/d) - Integrations & Reportings - Searchmetrics GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -215,7 +219,7 @@
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Edenred/743999698137875-data-analyst-h-f'>Edenred France Data Analyst H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Edenred/743999698137875-data-analyst-h-f'>Edenred France Data Analyst H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France France  France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -232,7 +236,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n59BlMwr'>Freedom Financial Network Careers - Business Intelligence/Data Analyst III</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n59BlMwr'>Freedom Financial Network Careers - Business Intelligence/Data Analyst III</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -266,7 +270,7 @@ achieve our mission to quantify user interactions with government services.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/thrivecausemetics/ed722ed6-c184-4282-8491-e4af79037623'>Thrive Causemetics - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thrivecausemetics/ed722ed6-c184-4282-8491-e4af79037623'>Thrive Causemetics - Data Analyst</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA  Los Angeles</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -276,7 +280,7 @@ achieve our mission to quantify user interactions with government services.</p>
 Intelligence initiative. This initiative is focused on collecting and curating the 
 wealth of?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://evite.applytojob.com/apply/vdp2wC1APK/Data-Analyst'>Data Analyst - Evite, Inc. - Career Page</a></h5> 
+<h5><a href='https://evite.applytojob.com/apply/vdp2wC1APK/Data-Analyst'>Data Analyst - Evite, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... Apply to Data Analyst at Evite, Inc. in Los Angeles, CA.</p>
 <hr/>
@@ -331,7 +335,7 @@ organization?...</p>
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://translations.recruitee.com/l/fr/o/language-data-analyst-spanish-and-english-speakers'>
+<h5><a href='https://translations.recruitee.com/l/fr/o/language-data-analyst-spanish-and-english-speakers'>
       Language Data Analyst - Spanish and English Speakers - TransPerfect
     </a></h5> 
 <p><span class="badge badge-light">Tempe, ?tats-Unis</span></p>
@@ -363,7 +367,7 @@ organization?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://ibxhome.referrals.selectminds.com/jobs/medical-data-analyst-2640'>Medical Data Analyst - Independence Blue Cross Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ibxhome.referrals.selectminds.com/jobs/medical-data-analyst-2640'>Medical Data Analyst - Independence Blue Cross Careers</a></h5> 
 <p><span class="badge badge-light">Philadelphia, Pennsylvania</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -375,7 +379,7 @@ organization?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CustomizedEnergySolutions/743999697653003-operations-data-analyst-retail-market-services'>Customized Energy Solutions Operations Data Analyst ? Retail Market Services | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CustomizedEnergySolutions/743999697653003-operations-data-analyst-retail-market-services'>Customized Energy Solutions Operations Data Analyst ? Retail Market Services | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -414,7 +418,7 @@ Data Analyst. City, Dayton. State, OH. Description. Role and Responsibility:.</p
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LinkAssetServices/743999698073059-bi-data-analyst'>Link Asset Services BI / Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LinkAssetServices/743999698073059-bi-data-analyst'>Link Asset Services BI / Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Australia</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -503,10 +507,6 @@ Strategic Data Scientist / Chief Customer Analyst. This role reports directly to
 ?...</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oudpbfw1'>Santander Consumer USA Careers - Compliance Data Analyst III</a></h5> 
-<p><span class="badge badge-light">Dallas, Texas</span></p>
-<p>Posted on: 2019-10-25</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/ovdpbfw2'>Santander Consumer USA Careers - Compliance Data Analyst II</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
