--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -101,11 +101,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/miqdigital/jobs/4494271002'>Job Application for Senior Financial and Business Intelligence Analyst  at MiQ Digital</a></h5> 
+<h5><a href='https://boards.greenhouse.io/miqdigital/jobs/4494271002'>Job Application for Senior Financial and Business Intelligence Analyst  at MiQ Digital</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/payu/jobs/4497509002'>Job Application for Senior Business Intelligence Specialist at PayU</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/payu/jobs/4497509002'>Job Application for Senior Business Intelligence Specialist at PayU</a></h5> 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -117,7 +117,7 @@
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CorrectCraft/743999698314942-business-intelligence-intern'>Correct Craft Business Intelligence Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CorrectCraft/743999698314942-business-intelligence-intern'>Correct Craft Business Intelligence Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -154,7 +154,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">United States Irvine, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1908346'>Job Application for Business Intelligence Solutions Developer at Signifyd</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1908346'>Job Application for Business Intelligence Solutions Developer at Signifyd</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -170,7 +170,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">United States Irvine, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1893649'>Job Application for Business Intelligence Analyst at foodpanda Philippines</a></h5> 
+<h5><a href='https://boards.greenhouse.io/foodpandaphilippines/jobs/1893649'>Job Application for Business Intelligence Analyst at foodpanda Philippines</a></h5> 
 <p><span class="badge badge-light">Philippines  Philippines Philippines</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -221,7 +221,7 @@ data modeling, ETL and report development and mentors others on the best?...</p>
 governance to the collection and presentation of carbon data. We're looking for 
 an?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pollenteam.workable.com/j/DDC1E7BBE2'>Business Intelligence Analyst - Pollen (Formally known as Verve)</a></h5> 
+<h5><a href='https://pollenteam.workable.com/j/DDC1E7BBE2'>Business Intelligence Analyst - Pollen (Formally known as Verve)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... As our Business Intelligence Analyst at Pollen, you will be part of the broader 
 agile and geographically-dispersed BI team, focused on facilitating a company?...</p>
@@ -230,7 +230,7 @@ agile and geographically-dispersed BI team, focused on facilitating a company?..
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/heycar/jobs/4494892002'>Job Application for Business Intelligence Senior Data Engineer (m/f/d) at heycar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/heycar/jobs/4494892002'>Job Application for Business Intelligence Senior Data Engineer (m/f/d) at heycar</a></h5> 
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -242,7 +242,7 @@ agile and geographically-dispersed BI team, focused on facilitating a company?..
 <p><span class="badge badge-light">Sao Paulo, Brazil</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/99taxis/29b5c2bc-7584-4d86-b617-749c65539b8f'>DiDi Global - Business Intelligence Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/99taxis/29b5c2bc-7584-4d86-b617-749c65539b8f'>DiDi Global - Business Intelligence Specialist</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -260,7 +260,7 @@ using?...</p>
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='http://pdi.applytojob.com/apply/bGBLwhKkYN/Business-Intelligence-Developer'>Business Intelligence Developer - PDI - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pdi.applytojob.com/apply/bGBLwhKkYN/Business-Intelligence-Developer'>Business Intelligence Developer - PDI - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -268,7 +268,7 @@ using?...</p>
 <p><span class="badge badge-light">Sao Paulo, Brazil</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/ohVpbfww'>SEGA Europe Limited Careers - Business Intelligence Analyst - Commercial</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/ohVpbfww'>SEGA Europe Limited Careers - Business Intelligence Analyst - Commercial</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -306,7 +306,7 @@ using?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/happyfresh/5a6f3514-9905-443b-9008-4c1d5448ed40'>HappyFresh - Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/happyfresh/5a6f3514-9905-443b-9008-4c1d5448ed40'>HappyFresh - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur  Jakarta Malaysia Thailand</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -314,7 +314,7 @@ using?...</p>
 <p><span class="badge badge-light">New York, New York  New York Chicago Atlanta</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/mavenlink/job/osmnbfw6'>Mavenlink Careers - Senior Business Intelligence Consultant</a></h5> 
+<h5><a href='https://jobs.jobvite.com/mavenlink/job/osmnbfw6'>Mavenlink Careers - Senior Business Intelligence Consultant</a></h5> 
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -367,11 +367,11 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Venice, CA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://faraday.ac.uk/business-intelligence-manager/'>BUSINESS INTELLIGENCE MANAGER ? The Faraday Institution</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://faraday.ac.uk/business-intelligence-manager/'>BUSINESS INTELLIGENCE MANAGER ? The Faraday Institution</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697843190-junior-business-intelligence-analyst'>Bosch Group Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697843190-junior-business-intelligence-analyst'>Bosch Group Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -383,7 +383,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nvjqgMwL'>Freedom Financial Network Careers - Business Intelligence/Data Analyst III</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nvjqgMwL'>Freedom Financial Network Careers - Business Intelligence/Data Analyst III</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
